// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AuthenticationProviderInformation />  > renders correctly according to Login method > should not render change password button when password is not used 1`] = `
<div>
  <section
    class="content-box profile-section"
  >
    <div
      class="flex-box-columns"
    >
      <div
        class="editor-description-container"
      >
        <h2>
          profileInformation.loginAndAuthentication
        </h2>
        <span>
          identityProvider.tunnistusSuomifi
        </span>
      </div>
    </div>
  </section>
</div>
`;

exports[`<AuthenticationProviderInformation />  > renders correctly according to Login method > should render change password button when password is used 1`] = `
<div>
  <section
    class="content-box profile-section"
  >
    <div
      class="flex-box-columns"
    >
      <div
        class="editor-description-container"
      >
        <h2>
          profileInformation.loginAndAuthentication
        </h2>
        <span>
          identityProvider.tunnistusSuomifi
        </span>
      </div>
      <hr />
      <div
        class="flex-box-rows"
      >
        <div
          class="editor-title-and-value"
        >
          <h3
            class="label-size"
          >
            profileInformation.password
          </h3>
        </div>
        <div
          class="edit-buttons-container"
        >
          <button
            class="Button-module_button__1msFE button_hds-button__2A0je Button-module_primary__2LfKB button_hds-button--primary__2NVvO"
            data-testid="change-password-button"
            type="button"
          >
            <div
              aria-hidden="true"
              class="Button-module_icon__O-h7R button_hds-icon__17j8Z"
            >
              <svg
                aria-hidden="true"
                aria-label="link-external"
                class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M5 3V19H21V21H3V3H5ZM21 3V12H19V6.413L9.91421 15.5L8.5 14.0858L17.585 5H12V3H21Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            <span
              class="Button-module_label__a4np1 button_hds-button__label__2EQa-"
            >
              profileInformation.changePassword
            </span>
          </button>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<AuthenticationProviderInformation />  > renders correctly when AMR is helsinkiAccountAMR > should render helsinki account information as expected based on config 1`] = `
<div>
  <section
    class="content-box profile-section"
  >
    <div
      class="flex-box-columns"
    >
      <div
        class="editor-description-container"
      >
        <h2>
          profileInformation.loginAndAuthentication
        </h2>
        <span>
          identityProvider.helsinkiAccount
        </span>
      </div>
    </div>
  </section>
</div>
`;

exports[`<AuthenticationProviderInformation />  > renders correctly when AMR is tunnistusSuomifiAMR > should render suomi.fi information as expected based on config 1`] = `
<div>
  <section
    class="content-box profile-section"
  >
    <div
      class="flex-box-columns"
    >
      <div
        class="editor-description-container"
      >
        <h2>
          profileInformation.loginAndAuthentication
        </h2>
        <span>
          identityProvider.tunnistusSuomifi
        </span>
      </div>
    </div>
  </section>
</div>
`;
